# ipfs_transformers_py

./: .gitignore  README.md  collection.json  example.py  package.json  pyproject.toml  requirements.txt  scraper.js  setup.py
.github/workflows/: publish_to_pipy.yml  workflow.yml
config/: config template.toml  config.js
huggingface_scraper/: checkpoint_diffusion_convert.js  checkpoint_gguf_convert.js  convert.js  generate_manifest.js  generator.js  ipfs.js  ipfs_kit.js  ipfs_test.js  main.js  manifest.js  model_manager.js  process_manifest.js  process_manifest_test.js  readme-generate.js  s3.js  s3_kit.js  test_fio.js  tmp_file.js  utils.js
huggingface_scraper/huggingface/: convert_ckpt_hf.py  convert_safetensor_hf.py  hf_convert_diffusion.py  huggingface_hub_upload.py  requirements.txt
huggingface_scraper/ipfs_kit_lib/: config  identity.json  install_ipfs.js  ipfs-cluster-follow.service  ipfs-cluster-service.service  ipfs.js  ipfs.service  ipfs_cluster_ctl.js  ipfs_cluster_follow.js  ipfs_cluster_service.js  ipget.js  peerstore  service.json  test_fio.js  text_fio.js
huggingface_scraper/libllama/: quantize  requirements.txt
huggingface_scraper/manifests/: manifest_api.js  (+9 more)
ipfs_transformers/: __init__.py  ipfs_kit.py  ipfs_transformers.py  ipfs_transformers_generator.py  ipfs_transformers_template.py  model_manager.py  orbit_kit.py  s3_kit.py  test_fio.py
ipfs_transformers_py/: ipfs_kit.py  ipfs_transformers_template.py
model_collection_viewer/: collection.json  dev.js  index.html  models.json  package.json  style.css
orbitdb_kit/: import-collection.js
(+26 files in other folders)
